syntax = "proto3";
option go_package = "/pb";
package pb;
import "baseinfo.proto";
// kindID 2001
//场景
message BaccaratSceneResp{
  int64 timeStamp = 1;            //时间戳
  string inning = 2;              //牌局号
  repeated int32 chips = 3;       //筹 码
  repeated bytes awardAreas = 4;  //开奖记录(路单)
  repeated int64 areaBets = 5;    //各下注区当前总下注额
  repeated int64 myBets = 6;      //个人在各下注区的总下注额
  PlayerList allPlayers = 7;  //玩家列表
}
//状态
// 服务端推送
//(准备)
message BaccaratStateStartResp {
  TimeInfo times = 1;
  string inning = 2;               // 牌局号
}
//(下注)
message BaccaratStatePlayingResp {
  TimeInfo times = 1;
}
//(开奖)
message BaccaratStateOpenResp {
  TimeInfo times = 1;
  BaccaratOpenResp openInfo = 2;
}
//(结束)
message BaccaratStateOverResp {
  TimeInfo times = 1;
}
//游戏消息
//抢庄
message BaccaratHostReq {
  bool isWant = 1;//true上庄 false取消上庄
}
message BaccaratHostResp {
  int64 userID = 1;
  bool isWant = 2;//true上庄 false取消上庄
}
//超级抢庄
message BaccaratSuperHostReq {
  bool isWant = 1;//true上庄 false取消
}
message BaccaratSuperHostResp {
  int64 userID = 1;
  bool isWant = 2;//true上庄 false取消
}
//下注
message BaccaratBetReq{
  int32 betArea = 1;        //下注区域
  int64 betScore = 2;        //下注金额
}
message BaccaratBetResp{
  int64 userID = 1;
  int32 betArea = 2;        //下注区域
  int64 betScore = 3;        //下注金额
}
//结束
message BaccaratOpenResp{
  bytes awardArea = 1;  //开奖区域
  CardInfo playerCard = 2;  //闲家的牌
  CardInfo bankerCard = 3;  //庄家的牌
}
//结算
message BaccaratCheckoutResp{
  int64 myAcquire = 1;        //获得金币(结算)
  repeated int64 acquires = 2;//
}
// 下注区域
//    AREA_XIAN        = 0 //闲家
//    AREA_PING        = 1 //平家
//    AREA_ZHUANG      = 2 //庄家
//    AREA_XIAN_TIAN   = 3 //闲天王
//    AREA_ZHUANG_TIAN = 4 //庄天王
//    AREA_TONG_DUI    = 5 //同点平
//    AREA_XIAN_DUI    = 6 //闲对子
//    AREA_ZHUANG_DUI  = 7 //庄对子
//游戏规则:
//使用3～8副，每副52张纸牌，洗在一起，置於发牌盒中，由荷官从其中分发。
//各家力争手中有两三张牌总点数为9或接近9，K、Q、J和10都计为0，其他牌按牌面计点。
//计算时，将各家手中的牌值相加，但仅论最後一位数字。当场付赌金最多者为庄家。
