syntax = "proto3";
option go_package = "/pb";
package pb;
import "game.proto";
import "player.proto";
// kindID 2004
//场景
message TigerXdragonSceneResp{
  int64 timeStamp = 1;            //时间戳
  string inning = 2;              //牌局号
  repeated int32 chips = 3;       //筹 码
  repeated bytes awardAreas = 4;  //开奖记录(路单)
  repeated int64 areaBets = 5;    //各下注区当前总下注额
  repeated int64 myBets = 6;      //个人在各下注区的总下注额
  PlayerListInfo allPlayers = 7;  //玩家列表
}
//状态
// 服务端推送
//(准备)
message TigerXdragonStateStartResp {
  TimeInfo times = 1;
  string inning = 2;               // 牌局号
}
//(下注)
message TigerXdragonStatePlayingResp {
  TimeInfo times = 1;
}
//(开奖)
message TigerXdragonStateOpenResp {
  TimeInfo times = 1;
  TigerXdragonOpenResp openInfo = 2;
}
//(结束)
message TigerXdragonStateOverResp {
  TimeInfo times = 1;
}
//游戏消息
//下注
message TigerXdragonBetReq{
  int32 betArea = 1;        //下注区域
  int64 betScore = 2;        //下注金额
}
message TigerXdragonBetResp{
  int64 userID = 1;
  int32 betArea = 2;        //下注区域
  int64 betScore = 3;        //下注金额
}
//结束
message TigerXdragonOpenResp{
  bytes cards = 1;       //开奖数据
  bytes awardArea = 2;  //中奖区域 1~13
}
//结算
message TigerXdragonCheckoutResp{
  int64 myAcquire = 1;        //获得金币(结算)
  repeated int64 acquires = 2;//各个区域输赢情况
}
/////////////预留协议///////////////////////////
//抢庄
message TigerXdragonHostReq {
  bool isWant = 1;//true上庄 false取消上庄
}
message TigerXdragonHostResp {
  int64 userID = 1;
  bool isWant = 2;//true上庄 false取消上庄
}
//超级抢庄
message TigerXdragonSuperHostReq {
  bool isWant = 1;//true上庄 false取消
}
message TigerXdragonSuperHostResp {
  int64 userID = 1;
  bool isWant = 2;//true上庄 false取消
}
// 从零开始，后面累加1 共13区域
//    Area_Win             //庄赢 (除庄输和庄赢两个区域外,对玩家下注情况进行统计)
//    Area_Lose            //庄输
//    Area_Dragon          //龙
//    Area_Tiger           //虎
//    Area_Drawn           //和局
//    Area_DDiamond        //龙方块
//    Area_DClub           //龙梅花
//    Area_DHeart          //龙红桃
//    Area_DSpade          //龙黑桃
//    Area_TDiamond        //虎方块
//    Area_TClub           //虎梅花
//    Area_THeart          //虎红桃
//    Area_TSpade          //虎黑桃
